--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.monthly.SplashActivity"
+            android:exported="false"
+            android:screenOrientation="userPortrait"
+            >
+
+        </activity>
+        <activity
+            android:name=".ui.main.MainActivity"
             android:exported="true"
             android:screenOrientation="userPortrait"
             >
@@ -24,11 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:exported="false"
-            android:screenOrientation="userPortrait"
-            />
 
         <meta-data
             android:name="preloaded_fonts"
